--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,21 @@ typings/
 
 # next.js build output
 .next
+
+# nuxt.js build output
+.nuxt
+
+# Nuxt generate
+dist
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# IDE
+.idea
+
+# Service worker
+sw.*
