--- a/shop_express/package.json
+++ b/shop_express/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "sqlite-async": "^1.0.11"
+    "sqlite-async": "^1.0.11",
+    "sqlite3": "^4.0.6"
   }
 }
